--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="outlet_ts">OUTLET T/S</string>
     <string name="constant_power">Constant Power</string>
     <string name="constant_reduction">Constant Reduction</string>
+    <string name="numberRange">Please enter a number between 1 and 10</string>
     
     <string-array name="wires_array">
         <item>Platinum</item>
