--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="inlet">INLET</string>
     <string name="outlet">OUTLET</string>
-    <string name="n_of_blocks">N. of BLOCKS</string>
+    <string name="n_of_dies">N. of DIES</string>
+    <string name="carbon_content">CARBON CONTENT</string>
     <string name="type_of_wire">TYPE OF WIRE</string>
     <string name="target_speed">TARGET SPEED</string>
     <string name="confirm">Confirm</string>
@@ -19,14 +20,26 @@
     <string name="numberRange">Please enter a number between 1 and 10</string>
     <string name="dieschedule">DIE SCHEDULE</string>
     
-    <string-array name="wires_array">
-        <item>Platinum</item>
-        <item>Silver</item>
-        <item>Iron</item>
-        <item>Copper</item>
-        <item>Aluminium</item>
-        <item>Brass</item>
-        <item>Bronze</item>
-        <item>Steel</item>
+    <string-array name="carbon_content_array">
+        <item>0.10</item>
+        <item>0.15</item>
+        <item>0.20</item>
+        <item>0.25</item>
+        <item>0.30</item>
+        <item>0.35</item>
+        <item>0.40</item>
+        <item>0.45</item>
+        <item>0.50</item>
+        <item>0.55</item>
+        <item>0.60</item>
+        <item>0.65</item>
+        <item>0.70</item>
+        <item>0.75</item>
+        <item>0.80</item>
+        <item>0.85</item>
+        <item>0.90</item>
+        <item>0.95</item>
+        <item>1.00</item>
+        <item>1.10</item>
     </string-array>
 </resources>
