--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="speed_wire_inlet">SPEED WIRE INLET</string>
     <string name="confirm">Confirm</string>
     <string name="calculate">Calculate</string>
+    <string name="constant">Constant</string>
+    <string name="optimized">Optimized</string>
     <string name="average_reduction">AVERAGE REDUCTION</string>
     <string name="total_reduction">TOTAL REDUCTION</string>
     <string name="inlet_ts">INLET T/S</string>
