Add chart libray with iconset and action bar action

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="constant_reduction">Constant Reduction</string>
     <string name="numberRange">Please enter a number between 1 and 10</string>
     <string name="dieschedule">DIE SCHEDULE</string>
+    <string name="openchart">Draw Charts</string>
     
     
     
